# science-radar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
output/: article_example.md  pipeline_example.md
skills/editorial-arbitration/: SKILL.md
skills/editorial-revision/: SKILL.md
skills/essay-writer/: SKILL.md
skills/fact-checker/: SKILL.md
skills/image-prompt-writer/: SKILL.md
skills/topic-relevance/: SKILL.md
src/science_radar/: config.py  crew.py  env_impact.py  main.py  report.py  reviews.py
src/science_radar/config/: agents.yaml  tasks.yaml
src/science_radar/lib/: __init__.py  api_retry.py  news.py  papers.py  validate.py
src/science_radar/tools/: __init__.py  illustration_tool.py  news_tool.py  paper_lookup_tool.py  papers_tool.py  web_search_tool.py
